All necessary folders and files added for prod.
